--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
     border-radius: 50%;
     border: 1.5vmin solid #fff; /* Пропорциональный размер границы */
     position: relative;
-    overflow: hidden;
     transition: transform 5s ease;
+    overflow: hidden;
     --rotation: 0deg;
     transform: rotate(var(--rotation));
 }
@@ -33,7 +33,7 @@ body {
 
 .container div {
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-    height: 50%;
+    height: 54%;
     width: 25vmin; /* Пропорциональный размер ширины */
     position: absolute;
     clip-path: polygon(100% 0, 50% 100%, 0 0);
@@ -41,7 +41,8 @@ body {
     transform-origin: bottom;
     text-align: center;
     display: flex;
-    align-items: flex-start;                                
+    align-items: flex-start;
+    top: -2vmin;                                
     padding: 10%;
     justify-content: center;
     font-size: 3vmin; /* Пропорциональный размер шрифта */
@@ -107,6 +108,9 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transform: translate(-50%, -50%);
     z-index: 10;
     background-color: #e2e2e2;
