--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 .container div {
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-    height: 54%;
+    height: 53%;
     width: 25vmin; /* Пропорциональный размер ширины */
     position: absolute;
     clip-path: polygon(100% 0, 50% 100%, 0 0);
@@ -42,7 +42,7 @@ body {
     text-align: center;
     display: flex;
     align-items: flex-start;
-    top: -2vmin;                                
+    top: -2vmin;
     padding: 10%;
     justify-content: center;
     font-size: 3vmin; /* Пропорциональный размер шрифта */
@@ -65,26 +65,32 @@ body {
     background-color: #ff0000;
     left: 50%;
 }
+
 .container .two {
     background-color: #ff7f00;
     transform: rotate(51deg);
 }
+
 .container .three {
     background-color: #ffff00;
     transform: rotate(102deg);
 }
+
 .container .four {
     background-color: #00ff00;
     transform: rotate(154deg);
 }
+
 .container .five {
     background-color: #0000ff;
     transform: rotate(205deg);
 }
+
 .container .six {
     background-color: #4b0082;
     transform: rotate(257deg);
 }
+
 .container .seven {
     background-color: #9400d3;
     transform: rotate(308deg);
@@ -116,7 +122,7 @@ body {
     background-color: #e2e2e2;
     text-transform: uppercase;
     border: 1.5vmin solid #fff; /* Пропорциональный размер границы */
-    color: #ffffff;
+    color: #fff;
     width: 17vmin; /* Пропорциональный размер кнопки */
     height: 17vmin;
     border-radius: 50%;
@@ -125,10 +131,6 @@ body {
     letter-spacing: 1px;
     background-image: url('images/logo.jpg');
     background-size: cover;
-}
-
-#spin:hover {
-    background-color: red;
 }
 
 /* Медиазапросы для более точной настройки на разных устройствах */
@@ -140,7 +142,6 @@ body {
 
     .container div {
         width: 35vmin;
-        left: 35vmin;
         font-size: 4vmin;
         left: 16vmin;
     }
@@ -162,3 +163,4 @@ body {
         border-top: 4vmin solid #fff;
     }
 }
+
