--- a/style.css
+++ b/style.css
@@ -17,16 +17,18 @@ body {
     position: relative;
     border-radius: 10%;
     align-items: center;
+    background-size: cover;
     justify-content: center;
+    background-position-x: 70%;
     width: 300px; height: 300px;
-    background-color: #ffffff;
+    background-image: url("images/texture.webp");
 }
 
 .wheel {
     color: #ffffff;
     font-family: sans-serif;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-    font-size: 2vmin;
+    font-size: 20px;
     font-weight: bold;
     text-align: center;
     padding: 40%;
@@ -100,7 +102,7 @@ body {
     justify-content: center;
     border: 10px solid #fff;
     background-color: #e2e2e2;
-    background-image: url("logo.jpg");
+    background-image: url("images/logo.jpg");
 }
 
 .arrow {
